@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.221 2006/02/06 20:15:55 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.222 2006/02/10 23:55:26 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  check for partitions of 'unknown' type and warn user
 
   6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   KEYMAP and CONSOLEFONT default to blank in OtherSettings.py
